Added crud for products. Added price_check api for cart object. Added blueprinter gem for structuring active record responses. Added money gem to handle prices
