# app/models/product.rb
@@ -1,0 +1,7 @@
+class Product < ApplicationRecord
+
+  validates_presence_of :name, :code, :price
+  validates_uniqueness_of :code
+  
+  belongs_to :store
+end
