# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2022_01_13_120608) do
+ActiveRecord::Schema.define(version: 2022_01_13_124842) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -22,6 +22,16 @@ ActiveRecord::Schema.define(version: 2022_01_13_120608) do
     t.datetime "updated_at", precision: 6, null: false
   end
 
+  create_table "products", force: :cascade do |t|
+    t.string "name"
+    t.string "code"
+    t.decimal "price", precision: 4, scale: 2
+    t.bigint "store_id", null: false
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+    t.index ["store_id"], name: "index_products_on_store_id"
+  end
+
   create_table "stores", force: :cascade do |t|
     t.string "name"
     t.bigint "currency_id", null: false
@@ -30,5 +40,6 @@ ActiveRecord::Schema.define(version: 2022_01_13_120608) do
     t.index ["currency_id"], name: "index_stores_on_currency_id"
   end
 
+  add_foreign_key "products", "stores"
   add_foreign_key "stores", "currencies"
 end
